I changed file index.html

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>webpack starterkit</title>
+  <meta name=viewport content="width=device-width,initial-scale=1">
+  <title>Flaby</title>
 </head>
 <body>
+  <div class="page">
+    <section class="page__section.page-section.page-section_header">
+      <div class="page-section__inner">
+        <a href="#" class="logo" title="Flaby">
+          <img class="logo__img" src="img/logo.svg" alt="Flaby">
+        </a>
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-list__item">
+              <a href="#" class="nav-list__link">Home</a>
+            </li>
+            <li class="nav-list__item">
+                <a href="#" class="nav-list__link">Services</a>
+            </li>
+            <li class="nav-list__item">
+                <a href="#" class="nav-list__link">Portfolio</a>
+            </li>
+            <li class="nav-list__item">
+                <a href="#" class="nav-list__link">Blog</a>
+            </li>
+            <li class="nav-list__item">
+                <a href="#" class="nav-list__link">Contact Us</a>
+            </li>
+          </ul>
+          <button class="login-btn">Login</button>
+        </nav>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
