--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <section class="page__section.page-section.page-section_header">
       <div class="page-section__inner">
         <a href="#" class="logo" title="Flaby">
-          <img class="logo__img" src="img/logo.svg" alt="Flaby">
+          <img class="logo__img" src="/img/logo-2.svg" alt="Flaby">
         </a>
         <nav class="nav">
           <ul class="nav-list">
