I changed file index.html

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Flaby</title>
 </head>
 <body>
-    <img class="logo__img" src="img/bag.png" alt="Flaby" />
+    <img class="logo__img" src="bag.png" alt="Flaby" />
   <div class="page">
     <section class="page__section.page-section.page-section_header">
       <div class="page-section__inner">
