I changed file index.html

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <section class="page__section.page-section.page-section_header">
       <div class="page-section__inner">
         <a href="#" class="logo" title="Flaby">
-          <img class="logo__img" src="img/bag.png" alt="Flaby" />
+          <img class="logo__img" src="images/bag.png" alt="Flaby" />
         </a>
         <nav class="nav">
           <ul class="nav-list">
