I changed file index.html

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,12 @@
   <title>Flaby</title>
 </head>
 <body>
-    <img class="logo__img" src="bag.png" alt="Flaby" />
+    <img class="logo__img" src="/public/images/logo.svg" alt="Flaby" />
   <div class="page">
     <section class="page__section.page-section.page-section_header">
       <div class="page-section__inner">
         <a href="#" class="logo" title="Flaby">
-          <img class="logo__img" src="images/bag.png" alt="Flaby" />
+          <img class="logo__img" src="../public/images/bag.png" alt="Flaby" />
         </a>
         <nav class="nav">
           <ul class="nav-list">
