I changed file index.html

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,13 @@
   <title>Flaby</title>
 </head>
 <body>
-    <img class="logo__img" src="/public/images/logo.svg" alt="Flaby" />
   <div class="page">
     <section class="page__section.page-section.page-section_header">
       <div class="page-section__inner">
-        <a href="#" class="logo" title="Flaby">
-          <img class="logo__img" src="../public/images/bag.png" alt="Flaby" />
-        </a>
         <nav class="nav">
+          <a href="#" class="logo" title="Flaby">
+              <img class="logo__img" src="/public/images/logo.svg" alt="Flaby" />
+          </a>
           <ul class="nav-list">
             <li class="nav-list__item">
               <a href="#" class="nav-list__link">Home</a>
@@ -33,6 +32,17 @@
           </ul>
           <button class="login-btn">Login</button>
         </nav>
+        <div class="tamplate-desc">
+          <h2 class="tamplate-desc__title">Flat + Free + Flaby</h2>
+          <p class="tamplate-desc__text">A Modern Flat design corporate 
+            template for free download with all great features and trendy 
+            look.
+          </p>
+          <div class="tamplate-desc__btns">
+            <button class="tamplate-desc__btn tamplate-desc__btn_google">Google Srore</button>
+            <button class="tamplate-desc__btn tamplate-desc__btn_more">Learn more</button>
+          </div>
+        </div>
       </div>
     </section>
   </div>
