--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="page">
-    <section class="page__section.page-section.page-section_header">
+    <section class="page__section page-section page-section_header">
       <div class="page-section__inner">
         <nav class="nav">
           <a href="#" class="logo" title="Flaby">
