--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
     <section class="page__section page-section page-section_header">
       <div class="page-section__inner">
         <nav class="nav">
-          <a href="#" class="logo" title="Flaby">
+          <a href="#" class="nav__logo logo" title="Flaby">
               <img class="logo__img" src="/public/images/logo.svg" alt="Flaby" />
           </a>
-          <ul class="nav-list">
+          <ul class="nav__list nav-list">
             <li class="nav-list__item">
               <a href="#" class="nav-list__link">Home</a>
             </li>
@@ -30,7 +30,7 @@
                 <a href="#" class="nav-list__link">Contact Us</a>
             </li>
           </ul>
-          <button class="login-btn">Login</button>
+          <button class="nav__login-btn  login-btn">Login</button>
         </nav>
         <div class="tamplate-desc">
           <h2 class="tamplate-desc__title">Flat + Free + Flaby</h2>
