I changed file index.html

--- a/src/index.html
+++ b/src/index.html
@@ -13,24 +13,31 @@
           <a href="#" class="nav__logo logo" title="Flaby">
               <img class="logo__img" src="/public/images/logo.svg" alt="Flaby" />
           </a>
-          <ul class="nav__list nav-list">
-            <li class="nav-list__item">
-              <a href="#" class="nav-list__link">Home</a>
-            </li>
-            <li class="nav-list__item">
-                <a href="#" class="nav-list__link">Services</a>
-            </li>
-            <li class="nav-list__item">
-                <a href="#" class="nav-list__link">Portfolio</a>
-            </li>
-            <li class="nav-list__item">
-                <a href="#" class="nav-list__link">Blog</a>
-            </li>
-            <li class="nav-list__item">
-                <a href="#" class="nav-list__link">Contact Us</a>
-            </li>
-          </ul>
-          <button class="nav__login-btn  login-btn">Login</button>
+
+          <button id="nav-btn" type="button" aria-label="open menu" class="nav-btn"><span class="nav-btn__line nav-btn__line_top"></span><span class="nav-btn__line nav-btn__line_middle"></span><span class="nav-btn__line nav-btn__line_bottom"></span></button>
+
+          <div class="nav__list-wrap">
+
+            <ul class="nav__list nav-list">
+              <li class="nav-list__item">
+                <a href="#" class="nav-list__link">Home</a>
+              </li>
+              <li class="nav-list__item">
+                  <a href="#" class="nav-list__link">Services</a>
+              </li>
+              <li class="nav-list__item">
+                  <a href="#" class="nav-list__link">Portfolio</a>
+              </li>
+              <li class="nav-list__item">
+                  <a href="#" class="nav-list__link">Blog</a>
+              </li>
+              <li class="nav-list__item">
+                  <a href="#" class="nav-list__link">Contact Us</a>
+              </li>
+            </ul>
+
+            <button class="nav__login-btn  login-btn">Login</button>
+          </div>
         </nav>
         <div class="tamplate-desc">
           <h2 class="tamplate-desc__title">Flat + Free + Flaby</h2>
