I changed file index.html

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,103 @@
         </div>
       </div>
     </section>
+    <section class="page__section page-section page-section_services">
+      <h2 class="page-section__title">
+        <span class="page-section__title_small-text">Welcome to</span>
+        Our Services
+      </h2>
+      <div class="page-section__content">
+        <ul class="services-list">
+          <li class="services-list__item">
+            <img src="/public/images/web-develop.png" alt="">
+            <h3 class="services-list__title">Web Development</h3>
+            <p class="services-list__desc">There are many variations of passages of Lorem Ipsum available,  the majorityalteration make difficult</p>
+          </li>
+          <li class="services-list__item">
+            <img src="/public/images/photograf.png" alt="">
+            <h3 class="services-list__title">Photography</h3>
+            <p class="services-list__desc">There are many variations of passages of Lorem Ipsum available,  the majorityalteration make difficult</p>
+          </li>
+          <li class="services-list__item">
+            <img src="/public/images/vector.png" alt="">
+            <h3 class="services-list__title">Vector Artist</h3>
+            <p class="services-list__desc">There are many variations of passages of Lorem Ipsum available,  the majorityalteration make difficult</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="page__section page-section page-section_customization">
+      <div class="customization">
+        <h2 class="page-section__title">
+          <span class="page-section__title_small-text">We have great features with</span>
+          Unlimited Customization Features
+        </h2>
+        <p class="customization__text">There are many variations of passages of Lorem Ipsum available,  the majorityalteration make difficult</p>
+        <ul class="customization-list">
+          <li class="customization-list__item">More wordpress featrures with great responsive design.</li>
+          <li class="customization-list__item">Corporate flat design with necessary elements.</li>
+          <li class="customization-list__item">Free vector shape and mockup by great designer.</li>
+          <li class="customization-list__item">Full one page flat and modern trend following goods.</li>
+        </ul>
+        <a href="#" class="button button_size_small">Read more</a>
+      </div>
+    </section>
+    <section class="page__section page-section page-section_our-services">
+      <h2 class="page-section__title">
+        <span class="page-section__title_small-text">View Our Latest</span>
+        Other services
+      </h2>
+      <ul class="other-services-list">
+        <li  class="other-services-list__item other-services-list__item_idea">
+          <h3 class="other-services-list__title">Idea Developing</h3>
+          <p class="other-services-list__desc">
+            There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design
+          </p>
+        </li>
+        <li  class="other-services-list__item other-services-list__item_best">
+          <h3 class="other-services-list__title">Best Coding</h3>
+          <p class="other-services-list__desc">
+            There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design
+          </p>
+        </li>
+        <li  class="other-services-list__item other-services-list__item_game">
+          <h3 class="other-services-list__title">Game Design</h3>
+          <p class="other-services-list__desc">
+            There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design
+          </p>
+        </li>
+        <li  class="other-services-list__item other-services-list__item_responsive">
+          <h3 class="other-services-list__title">Responsive Design</h3>
+          <p class="other-services-list__desc">
+            There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design
+          </p>
+        </li>
+        <li  class="other-services-list__item other-services-list__item_free">
+          <h3 class="other-services-list__title">Free Shopping</h3>
+          <p class="other-services-list__desc">
+            There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design
+          </p>
+        </li>
+        <li  class="other-services-list__item other-services-list__item_bonus">
+          <h3 class="other-services-list__title">Bonus Download</h3>
+          <p class="other-services-list__desc">
+            There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design
+          </p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="page__section page-section page-section_our-services">
+      <h2 class="page-section__title">
+        <span class="page-section__title_small-text">Get know About</span>
+        what customer say
+      </h2>
+      <div class="your-class">
+        <div>your content</div>
+        <div>your content</div>
+        <div>your content</div>
+      </div>
+    </section>
   </div>
 </body>
 </html>
